@@ -29,22 +29,23 @@ p @ids;
 #     [7]  "JENDA",
 #     [8]  "JSPICAK",
 #     [9]  "KLE",
-#     [10]  "MAJLIS",
-#     [11] "MILSO",
-#     [12] "MJFO",
-#     [13] "PAJAS",
-#     [14] "PASKY",
-#     [15] "PEK",
-#     [16] "POPEL",
-#     [17] "PSME",
-#     [18] "RUR",
-#     [19] "RVASICEK",
-#     [20] "SEIDLJAN",
-#     [21] "SKIM",
-#     [22] "SMRZ",
-#     [23] "STRAKA",
-#     [24] "TKR",
-#     [25] "TRIPIE",
-#     [26] "ZEMAN",
-#     [27] "ZOUL"
+#     [10] "KOLCON",
+#     [11] "MAJLIS",
+#     [12] "MILSO",
+#     [13] "MJFO",
+#     [14] "PAJAS",
+#     [15] "PASKY",
+#     [16] "PEK",
+#     [17] "POPEL",
+#     [18] "PSME",
+#     [19] "RUR",
+#     [20] "RVASICEK",
+#     [21] "SEIDLJAN",
+#     [22] "SKIM",
+#     [23] "SMRZ",
+#     [24] "STRAKA",
+#     [25] "TKR",
+#     [26] "TRIPIE",
+#     [27] "ZEMAN",
+#     [28] "ZOUL"
 # ]
