@@ -1,4 +1,5 @@
 0.14
+ - Add KOLCON CPAN account.
  - Add SEIDLJAN CPAN account.
 
 0.13 2014-09-06T04:23:03+02:00
